Refactor: Move happy number code from notebook to main.py and add basic tests
- Extracted the happy number logic from the notebook into a standalone `main.py` file
- Added `assert` statements to test the function with known inputs
- Improved code structure for clarity and modularity

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "055326f9",
    "metadata": {},
    "outputs": [
@@ -10,14 +10,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9986 is a happy number.\n",
-      "The process of digit squaring for 9986 is as follows:\n",
-      "262\n",
-      "44\n",
-      "32\n",
-      "13\n",
-      "10\n",
-      "1\n"
+      "9985 is not a happy number.\n",
+      "The process of digit squaring for 9985 is as follows:\n",
+      "251\n",
+      "30\n",
+      "9\n",
+      "81\n",
+      "65\n",
+      "61\n",
+      "37\n",
+      "58\n",
+      "89\n",
+      "145\n",
+      "42\n",
+      "20\n",
+      "4\n"
      ]
     }
    ],
@@ -1508,6 +1515,83 @@
     "for i in range(1, 10000):\n",
     "    if is_happy_number(i):\n",
     "        print(i, \"is a happy number.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "989b0356",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "number = input(\"Enter the number: \")\n",
+    "\n",
+    "def is_happy_number(n):\n",
+    "    while n != 1 and n != 4 :\n",
+    "        n = sum(int(i)**2 for i in str(n))\n",
+    "    return n == 1\n",
+    "\n",
+    "is_happy_number(number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "9d8cce35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_happy_num(n):\n",
+    "    seen_numbers = set({4, 16, 20, 37, 58, 89})\n",
+    "    while n != 1 and n not in seen_numbers :\n",
+    "        seen_numbers.add(n)\n",
+    "        n = sum(int(i)**2 for i in str(n))\n",
+    "        print(n)\n",
+    "    print(seen_numbers)\n",
+    "    return n == 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "8052f863",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "644\n",
+      "68\n",
+      "100\n",
+      "1\n",
+      "{4, 644, 68, 16, 20, 89, 28963698745225891, 100, 37, 58}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_happy_num(28963698745225891)"
    ]
   }
  ],
